--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,9 +58,13 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/a.jpg
+    - assets/images/b.jpg
+    - assets/images/c.jpg
+    - assets/images/d.jpg
+    - assets/images/e.jpg
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
